--- a/css/main.css
+++ b/css/main.css
@@ -12026,8 +12026,8 @@ section.page_map {
 .ds textarea,
 .ds select,
 .ds .form-control {
-    background-color: transparent;
-    border: #ffffff1a solid 2px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
     border-radius: 5px;
     color: #fff;
     font-family: "Vidaloka", serif;
