--- a/css/main.css
+++ b/css/main.css
@@ -3537,7 +3537,7 @@ a.pswp__share--download:hover {
 
 #toTop {
     background-color: #e41779;
-    bottom: 0;
+    bottom: -22px;
     color: transparent;
     display: none;
     font-size: 0;
@@ -3545,10 +3545,11 @@ a.pswp__share--download:hover {
     opacity: 0.7;
     overflow: hidden;
     position: fixed;
-    right: 0;
+    right: 50%;
     text-decoration: none;
     width: 60px;
     z-index: 1000;
+    border-radius: 50%;
 }
 
 #toTop:after {
